option java_package = "com.mrmq.poker.common.proto";
option java_outer_classname = "AdminModelProto";

message User {
	required string loginId = 1;
	optional string pass = 2;
	optional string passNew = 3;
	optional string name = 4;
	optional int64 cash = 5; //Current amount of cash
	optional string avataUrl = 6;
}

message News {
	required string newsId = 1;
	required NewsType newsType = 2;
	optional string title = 3;
	optional string desc = 4;
	optional string url = 5;
	optional int64 gift = 6; //cash or other gift
	
	enum NewsType {
		INFO = 0;
		ADVERDS = 1;
		GAMES = 2;
		VIDEO = 3;
	}
}

message DepositInfo {
	optional string billSeri = 2;
	optional string billNumber = 3;
	optional string billType = 4;
	optional int64 billAmount = 5; //Current amount of cash
	optional int64 promo = 6;
	optional int32 promoSource = 7;
	optional string comment = 8;
}